<resources>
    <string name="app_name">漫宅</string>
    <string name="creator">100-A</string>
    <string name="txt_comic">漫画</string>
    <string name="txt_collection">收藏</string>
    <string name="txt_mine">我的</string>
    <string name="action_settings">设置</string>
    <string name="txt_search">搜索</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_details">详细页</string>
    <string name="details_to_read">开始阅读</string>
    <string name="details_continue_read">继续阅读</string>
    <string name="details_add_collection">收藏漫画</string>
    <string name="details_del_collection">取消收藏</string>
    <string name="details_txt_chapters">漫画章节</string>
    <string name="dialog_title_warming">警告</string>
    <string name="dialog_content_warming_network">您正在使用移动网络，是否观看？</string>
    <string name="dialog_content_warming_no_network">没有网络！</string>
    <string name="dialog_content_warming">该漫画中有部份章节可能含有暴力、血腥、色情或不当的语言等内容，根据中国法律法规，我们将对其进行屏蔽。</string>
    <string name="dialog_comic_ban_retry">翻wall后重试</string>
    <string name="dialog_comic_ban_cancel">我还是不看了</string>
    <string name="dialog_title_comic_name">漫画标题</string>
    <string name="dialog_btn_copy">复制</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_btn_close">关闭</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="chapter_type0">—单 行 本—</string>
    <string name="chapter_type1">—单　  话—</string>
    <string name="chapter_type2">—相关漫画—</string>
    <string name="data_loading">数据加载中…</string>
    <string name="data_load_fail">数据加载失败…</string>
    <string name="rule_error">规则错误！</string>
    <string name="gird_tips_loading_next_page">正在加载下一页</string>
    <string name="gird_tips_loading_next_page_fail">加载失败</string>
    <string name="reader_data_load_success">数据加载成功,\n等待图片加载。</string>
    <string name="error_network_connections">网络连接失败，请检查网络状态。</string>
    <string name="error_comic_chapter_load_fail">章节加载失败了,请检查网络状态。</string>
    <string name="refresh">刷新</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="history_delete_hint">左划删除</string>
    <string name="history_delete_up">松手删除</string>
    <string name="tips_search_not_found">没有找到你想要的漫画</string>
    <string name="tips_is_first">前面没有了…</string>
    <string name="tips_is_last">后面没有了…</string>
    <string name="tips_search">请输入搜索的关键词</string>
    <string name="tips_search_by_id">在搜索框中输入\"id:ID号/\"\n可以直接到达漫画详情页\n(如:\"id:123/\"不包含双引号)</string>
    <string name="opt_new">上新</string>
    <string name="opt_recommend">推荐</string>
    <string name="opt_update">更新</string>
    <string name="btn_all_comics">全部漫画</string>
    <string name="btn_new_comic">最近上新</string>
    <string name="btn_update_comic">最近更新</string>
    <string name="mine_comic_source">漫画源</string>
    <string name="mine_setting">设置</string>
    <string name="mine_history">观看记录</string>
    <string name="mine_source">漫画源</string>
    <string name="mine_about">关于</string>
    <string name="title_filter">分类</string>
    <string name="title_author_comics">\"%1$s\"的漫画</string>
    <string name="alert_confirm_exit">再按一次返回键退出应用程序</string>
    <string name="alert_copy_success">复制成功</string>
    <string name="alert_add_collect_success">收藏成功</string>
    <string name="alert_del_collect_success">取消收藏</string>
    <string name="alert_search_keyword_no_empty">关键字不能为空白！</string>
    <string name="alert_search_loading_tips">正在搜索关键词\"%1$s\"</string>
    <string name="setting_title_app">应用设置</string>
    <string name="setting_sub_title_source">漫画源</string>
    <string name="setting_sub_summary_source">当前漫画源:%1$s</string>
    <string name="setting_sub_title_theme">主题风格</string>
    <string name="setting_sub_summary_theme">在这里切换主题风格</string>
    <string name="setting_sub_nav_no_auto">虚拟导航栏跟随变色</string>
    <string name="setting_sub_title_no_splash">缩短启动动画</string>
    <string name="setting_sub_summary_no_splash">快速进入主界面</string>
    <string name="setting_sub_title_skip_network_hint">关闭移动数据提示</string>
    <string name="setting_sub_summary_on_skip_network_hint">使用数据流量时不提示</string>
    <string name="setting_sub_summary_off_skip_network_hint">使用数据流量时会提示</string>
    <string name="setting_title_read">阅读设置</string>
    <string name="setting_sub_title_use_volume_key">使用音量键翻页</string>
    <string name="setting_sub_title_preload">预加载页数</string>
    <string name="setting_sub_summary_preload">%1$d页</string>
    <string name="setting_preload_tip">实际同时加载页数为(选择数*2+1)</string>
    <string name="setting_sub_title_read_mode">阅读模式</string>
    <string name="setting_sub_summary_read_mode">当前模式:%1$s</string>
    <string name="setting_title_storage_cache">缓存设置</string>
    <string name="setting_sub_title_clear_image_cache">清理图片缓存</string>
    <string name="rule_add">添加</string>
    <string name="tips_calculating">计算中</string>
    <string name="tips_clear_success">清理成功</string>
</resources>
