<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="setting_parent">
    <PreferenceCategory android:title="@string/setting_title_app"
        android:layout="@layout/preference_category_material">
        <Preference
            android:title="@string/setting_sub_title_source"
            android:summary="@string/setting_sub_summary_source"
            android:key="setting_source" />
        <PreferenceScreen
            android:title="@string/setting_sub_title_theme"
            android:summary="@string/setting_sub_summary_theme"
            android:key="setting_theme">
        </PreferenceScreen>
        <ljw.comicviewer.ui.preference.MySwitchPreference
            android:defaultValue="false"
            android:title="@string/setting_sub_title_no_splash"
            android:summary="@string/setting_sub_summary_no_splash"
            android:key="noSplash"
            android:id="@+id/setting_splash"/>
        <ljw.comicviewer.ui.preference.MySwitchPreference
            android:defaultValue="false"
            android:title="@string/setting_sub_title_skip_network_hint"
            android:summaryOn="@string/setting_sub_summary_on_skip_network_hint"
            android:summaryOff="@string/setting_sub_summary_off_skip_network_hint"
            android:key="skipNetworkHint"
            android:id="@+id/setting_skip_network_hint"/>
    </PreferenceCategory>
</PreferenceScreen>