<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ljw.comicviewer.ui.fragment.RecommendFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/recommend_top"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="150dp"
        android:elevation="1dp"
        android:background="@color/green">

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/recommend_btns"
        android:layout_height="48dp"
        android:elevation="2dp"
        android:layout_below="@+id/recommend_top">

        <TextView
            android:text="@string/btn_new_comic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:textSize="20sp"
            android:background="@drawable/selector_bg_null_to_black_pressed"
            android:gravity="center"
            android:layout_weight="1" />
        <TextView
            android:text="@string/btn_update_comic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView3"
            android:textSize="20sp"
            android:background="@drawable/selector_bg_null_to_black_pressed"
            android:gravity="center"
            android:layout_weight="1" />
        <TextView
            android:text="@string/btn_all_comics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recommend_btn_all_comics"
            android:textSize="20sp"
            android:background="@drawable/selector_bg_null_to_black_pressed"
            android:gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/recommend_btns"
        android:background="@color/blue_A1E0F4">

    </RelativeLayout>

</RelativeLayout>
