<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MineFragment"
    android:orientation="vertical">

    <include
        android:id="@+id/mine_bar"
        layout="@layout/navigation_bar_default" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/mine_top_bg">

        <ImageView
            android:layout_width="125dp"
            android:id="@+id/imageView7"
            android:adjustViewBounds="false"
            android:background="@drawable/mine_head_pic"
            android:layout_centerInParent="true"
            android:layout_height="125dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_60"
        />
    <RelativeLayout
        android:id="@+id/layout_my_history"
        android:background="@drawable/selector_bg_white_to_black_pressed"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/long_line_option_button_height">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:drawablePadding="7dp"
            android:layout_centerVertical="true"
            android:id="@+id/txt_my_history"
            android:text="@string/mine_history"
            android:drawableLeft="@drawable/img_icon_history"
            android:gravity="center_vertical"
            android:textSize="15sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/img_more_grey"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_60" />

    <RelativeLayout
        android:id="@+id/layout_my_setting"
        android:background="@drawable/selector_bg_white_to_black_pressed"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/long_line_option_button_height">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:drawablePadding="7dp"
            android:layout_centerVertical="true"
            android:id="@+id/txt_my_setting"
            android:text="@string/mine_setting"
            android:drawableLeft="@drawable/img_icon_settings"
            android:gravity="center_vertical"
            android:textSize="15sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/img_more_grey"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_60" />

    <RelativeLayout
        android:id="@+id/layout_my_about"
        android:background="@drawable/selector_bg_white_to_black_pressed"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/long_line_option_button_height">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:drawablePadding="7dp"
            android:layout_centerVertical="true"
            android:id="@+id/txt_my_about"
            android:text="@string/mine_about"
            android:drawableLeft="@drawable/img_icon_about"
            android:gravity="center_vertical"
            android:textSize="15sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:src="@drawable/img_more_grey"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_60" />
</LinearLayout>
